ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/CnP_PaaS__CnP_Transaction__c.object-meta.xml
<CustomObject>
    <description>Represent a Transaction on CnP payment Gateway System.</description>
    <label>C&amp;P Transaction</label>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>