ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Amount__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to synchronize between transactions and contacts, this is hidden, do not delete.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>