ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__AutorizationCode__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__AutorizationCode__c</fullName>
    <label>Authorization Code</label>
    <length>36</length>
    <type>Text</type>
</CustomField>