ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__bSource__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__bSource__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This field is indicates the source where the transaction being added. 1 through API, 2 through Import.</description>
    <label>bSource</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>