ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__C_P_Currency__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Currency</label>
    <referenceTo>CnP_PaaS__CnP_Currency__c</referenceTo>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>