ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__C_P_Recurring__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Recurring__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring ID</label>
    <referenceTo>CnP_PaaS__CnPRecurring__c</referenceTo>
    <relationshipLabel>C&amp;P Transactions</relationshipLabel>
    <relationshipName>C_P_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>