ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campaign__c</fullName>
    <label>Campaign</label>
    <length>80</length>
    <type>Text</type>
</CustomField>