ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CardExpiration__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CardExpiration__c</fullName>
    <label>Credit Card Expiration</label>
    <length>7</length>
    <type>Text</type>
</CustomField>