ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Case__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>C&amp;P Transactions</relationshipLabel>
    <relationshipName>CnP_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>