ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Check_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Check_Type__c</fullName>
    <label>Check Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>