ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CheckOutPage__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CheckOutPage__c</fullName>
    <label>Form Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>