ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Account_ID__c</fullName>
    <label>Click &amp; Pledge Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>