ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_DepositPerTransaction__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_DepositPerTransaction__c</fullName>
    <label>Deposit Per Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>