ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_DepositSweepDate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_DepositSweepDate__c</fullName>
    <label>Deposit Sweep Date</label>
    <type>Date</type>
</CustomField>