ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_DepositTransactionDate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_DepositTransactionDate__c</fullName>
    <label>Deposit Transaction Date</label>
    <type>DateTime</type>
</CustomField>