ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_Fundraiser_Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Fundraiser_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Fundraiser Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P Transactions (C&amp;P Fundraiser Contact)</relationshipLabel>
    <relationshipName>CnP_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>