ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_pledgeTV_ChannelID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_pledgeTV_ChannelID__c</fullName>
    <label>C&amp;P pledgeTV ChannelID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>