ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_pledgeTV_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_pledgeTV_TimeStamp__c</fullName>
    <label>C&amp;P pledgeTV TimeStamp</label>
    <length>10</length>
    <type>Text</type>
</CustomField>