ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_pledgeTV_URL__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_pledgeTV_URL__c</fullName>
    <label>C&amp;P pledgeTV URL</label>
    <type>Url</type>
</CustomField>