ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_ReversalResponseDescription__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_ReversalResponseDescription__c</fullName>
    <label>Reversal Response Description</label>
    <type>TextArea</type>
</CustomField>