ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_ReversalSweepBatchID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_ReversalSweepBatchID__c</fullName>
    <label>Reversal Sweep Batch ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>