ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_ReversalSweepDate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_ReversalSweepDate__c</fullName>
    <label>Reversal Sweep Date</label>
    <type>Date</type>
</CustomField>