ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnP_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Status_Detail__c</fullName>
    <label>Status Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>