ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CnPAccountID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnPAccountID__c</fullName>
    <description>Represent relative account in Click &amp; Pledge</description>
    <label>C&amp;P Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>