ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Connect_Campaign_Alias__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Connect_Campaign_Alias__c</fullName>
    <label>Connect Campaign Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>