ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P Transactions</relationshipLabel>
    <relationshipName>C_P_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>