ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CouponCode__c</fullName>
    <label>Coupon Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>