ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Credit_Card_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Credit_Card_Expiration_Date__c</fullName>
    <label>Credit Card Expiration Date</label>
    <type>Date</type>
</CustomField>