ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Credit_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Credit_Processed_By__c</fullName>
    <label>Credit Processed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>