ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CreditCard4x4__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CreditCard4x4__c</fullName>
    <label>Credit Card Last 4 digits</label>
    <length>20</length>
    <type>Text</type>
</CustomField>