ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>