ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__CustomQuestions__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CustomQuestions__c</fullName>
    <label>Custom Question(s)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>