ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Email__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Email__c</fullName>
    <description>This field is used to synchronize between transactions and contacts, this is hidden, do not delete.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>