ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__GatewayTransactionNumber__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__GatewayTransactionNumber__c</fullName>
    <description>Represent related transaction number on the gateway</description>
    <label>Gateway Transaction Number</label>
    <length>36</length>
    <type>Text</type>
</CustomField>