ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Invoice_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Invoice_Check_Number__c</fullName>
    <label>Invoice/PO/Custom Check Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>