ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Name_On_card__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Name_On_card__c</fullName>
    <label>Account Holder&apos;s Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>