ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Organization_Name__c</fullName>
    <description>This field is used to synchronize between transactions and contacts, this is hidden, do not delete.</description>
    <label>Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>