ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__PaymentType__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__PaymentType__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>eCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>