ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Purchase_Order_Number__c</fullName>
    <label>Purchase Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>