ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Refund_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Refund_Date__c</fullName>
    <label>Refund Date</label>
    <type>DateTime</type>
</CustomField>