ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__remarks__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__remarks__c</fullName>
    <label>Remarks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>