ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Routing_Number__c</fullName>
    <label>Routing Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>