ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__SMS_Initiator_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Initiator_PhoneNumber__c</fullName>
    <label>Initiator Phone Number</label>
    <type>Phone</type>
</CustomField>