ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__SMS_MessageName__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_MessageName__c</fullName>
    <label>Message Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>