ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__SMS_ReceivedSMS__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_ReceivedSMS__c</fullName>
    <label>Received SMS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>