ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__TotalCharged__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__TotalCharged__c</fullName>
    <label>Total Charged</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>