ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__TotalDue__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__TotalDue__c</fullName>
    <label>Total Due</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>