ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__TransactionTimeZone__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__TransactionTimeZone__c</fullName>
    <label>Transaction Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>