ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Transaction__c/fields/CnP_PaaS__VaultGUID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__VaultGUID__c</fullName>
    <externalId>true</externalId>
    <label>Vault GUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>